# Game-Translator

./: .gitignore  Cargo.toml  LICENSE  README.md  export_src.bat  export_src_options.bat  setup_exllama3.bat  start.bat
.github/workflows/: rust.yml
docs/: exllama3-setup.md
src/: capture.rs  config.rs  gui.rs  main.rs  ocr.rs  overlay.rs  translate.rs
